# vkllm.c

./: .clang-format  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  extensions.bzl  run_all_tests.sh
docs/: hashset_refactoring.md  matmul_explanation.md  matmul_time_cost.txt  matmul_visual_example.md  vkllm_graph_functions.md  vkllm_hashset.md
scripts/: commit_msg_prompt.md  gen_comment.py  generate_hf_graph.py  git_commit.txt  infer_hf_graph.py
src/: BUILD  gpu_device.c  gpu_device.h  vkllm_array.h  vkllm_commands.c  vkllm_commands.h  vkllm_common.h  vkllm_context.c  vkllm_context.h  vkllm_dtypes.c  vkllm_dtypes.h  vkllm_dtypes.inc  vkllm_errors.c  vkllm_errors.h  vkllm_errors.inc  vkllm_gpu_device.c  vkllm_gpu_device.h  vkllm_graph.c  vkllm_hashset.h  vkllm_op_add.c  vkllm_op_add.h  vkllm_op_bin.c  vkllm_op_embedding.c  vkllm_op_embedding.h  vkllm_op_matmul.c  vkllm_op_matmul.h  vkllm_op_rmsnorm.c  vkllm_op_rmsnorm.h  vkllm_op_rope.c  vkllm_op_rope.h  vkllm_op_softmax.c  vkllm_op_vector_add.c  vkllm_op_vector_add.h  vkllm_ops.c  vkllm_ops.h  vkllm_pipeline.c  vkllm_pipeline.h  vkllm_tensor.c  vkllm_tensor.h
src/core/: BUILD  vkllm_commands.c  vkllm_commands.h  vkllm_common.h  vkllm_context.c  vkllm_context.h  vkllm_dtypes.c  vkllm_dtypes.h  vkllm_dtypes.inc  vkllm_errors.c  vkllm_errors.h  vkllm_errors.inc  vkllm_gpu_device.c  vkllm_gpu_device.h  vkllm_graph.c  vkllm_graph.h  vkllm_hashmap.c  vkllm_hashmap.h  vkllm_hashset.c  vkllm_op_arg_max.c  vkllm_op_arg_max.h  vkllm_op_bin.c  vkllm_op_bin.h  vkllm_op_copy.c  vkllm_op_copy.h  vkllm_op_embedding.c  vkllm_op_ffn_up_and_gate.c  vkllm_op_ffn_up_and_gate.h  vkllm_op_matmul.c  vkllm_op_matmul.h  vkllm_op_rmsnorm.c  vkllm_op_rmsnorm.h  vkllm_op_rope.c  vkllm_op_rope.h  vkllm_op_softmax.c  vkllm_op_softmax.h  vkllm_op_update_rows.c  vkllm_op_update_rows.h  vkllm_ops.c  vkllm_ops.h  (+4 more)
src/layers/: BUILD  vkllm_llama2_layers.c  vkllm_llama2_layers.h
src/models/: BUILD  vkllm_kvcache.c  vkllm_kvcache.h  vkllm_llama2_layers.c  vkllm_llama2_layers.h  vkllm_models_llama2.c  vkllm_models_llama2.h
src/shaders/: BUILD  vec_add.comp  vkllm_add.comp  vkllm_add_0.comp  vkllm_arg_max.comp  vkllm_bin_op.comp  vkllm_copy.comp  vkllm_embedding.comp  vkllm_embedding_0.comp  vkllm_ffn_up_and_gate.comp  vkllm_mat_mul_vec.comp  (+11 more)
tests/: BUILD  test_new_gpu.c  test_op_add.c  test_transfer.c  test_vector_add.c  vkllm_test_common.h  vkllm_test_hashmap.c  vkllm_test_hashset.c  vkllm_test_hashset_perf.c  vkllm_test_infer_gguf.c  vkllm_test_load_gguf.c  vkllm_test_op_add.c  vkllm_test_op_arg_max.c  vkllm_test_op_bin.c  vkllm_test_op_copy.c  vkllm_test_op_embedding.c  vkllm_test_op_ffn_up_and_gate.c  vkllm_test_op_matmul.c  vkllm_test_op_permute.c  vkllm_test_op_rmsnorm.c  vkllm_test_op_rope.c  vkllm_test_op_softmax.c  vkllm_test_op_update_rows.c  vkllm_test_tensor_reshape.c  vkllm_test_transfer.c
tools/: BUILD  binary_to_array.py  requirements.txt
vulkan_rules/: BUILD  linux_lib.bzl  macos_lib.bzl  setup.bzl  shader.bzl  toolchain.bzl
